# domichess

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  USAGE.md  build.bat  build.spec  pyproject.toml  start.py
Tierce Sources and Licenses/B&W Pawn/: License.txt
Tierce Sources and Licenses/Cairo_1.17.2/cairo/: LINK
Tierce Sources and Licenses/Cairo_1.17.2/cairo-windows/: LINK
Tierce Sources and Licenses/Icons/: LINK.txt
domichess/: __init__.py  display.py  engine.py  game.py  network.py
tests/: frame.py  network_finder.py  network_finder2.py
